# study

./: README.md  helloworld.cpp
C++/C++11/smartptr/weakptr/manager/: CMakeLists.txt
C++/C++11/smartptr/weakptr/manager/src/: CMakeLists.txt
C++/C++11/smartptr/weakptr/manager/src/demo1/: CMakeLists.txt  ExceptionCollect.cpp  ExceptionCollectExport.h  ThreadMonitor.cpp  ThreadMonitor.h  main.cpp
C++/C++11/smartptr/weakptr/manager/tools/: check_commit.py  cppcheck.py  cppcheck_htmlreport.py  encode_conv.py  format_code.py  unit_test.py
C++/C++11/smartptr/weakptr/manager/tools/cmake/: find_src.cmake  project_helper.cmake
C++/server_client/server/: .gitignore  CMakeLists.txt  build.sh
C++/server_client/server/src/: main.cpp  msgPlugin.cpp  msgPlugin.h  plugin.cpp  plugin.h  pluginDelegator.cpp  pluginDelegator.h  server.cpp  server.h
MyQtDll/: MyQtDll.pro  myqtdll.cpp  myqtdll.h  myqtdll_global.h
OpenGL/openGLDemo/app/demo/: CMakeLists.txt
OpenGL/openGLDemo/app/demo/src/: Shader.h  main.cpp  shader.fs  shader.vs
Qt/QHook/HookKeyboard/: .gitignore  CMakeLists.txt  HookKeyboard.pro  README.md
Qt/QHook/HookKeyboard/src/: VXCKeyAssistant.cpp  VXCKeyAssistant.h  VXCKeyAssistantFactory.cpp  VXCKeyAssistantFactory.h  widget.cpp  widget.h
Qt/QHook/HookKeyboard/src/log/: VXLog.cpp  VXLog.h
Qt/QHook/HookKeyboard/src/mac/: VXCKeyAssistantMac.h
Qt/QHook/HookKeyboard/src/win/: VXCKeyAssistantWin.cpp  VXCKeyAssistantWin.h
Qt/QTest/gui/: CMakeLists.txt
Qt/QTest/gui/src/: CMakeLists.txt
Qt/QTest/gui/src/app/: CMakeLists.txt
Qt/QTest/gui/src/app/gui/: CMakeLists.txt
Qt/QTest/gui/src/app/gui/test/: testgui.cpp
Qt/QTest/gui/src/app/gui2/: CMakeLists.txt
Qt/QTest/gui/src/app/gui2/main/: main.cpp
Qt/QTest/gui/src/app/gui2/test/: main.cpp  testgui.cpp  testgui.h
Qt/QTest/gui/tools/: check_commit.py  encode_conv.py  format_code.py  unit_test.py
Qt/QTest/gui/tools/cmake/: find_src.cmake  project_helper.cmake
network/libwebsockets/demo/app/server/: CMakeLists.txt
network/libwebsockets/demo/app/server/src/: RDWebSocket.h  RDWebSocketServer.cpp  RDWebSocketServer.h  main.cpp
server/httpDemo/: .gitignore  CMakeLists.txt  README.md  build.sh
server/httpDemo/doc/: taskList.json  taskListEx.json  taskResult.json  taskResultEx.json  taskResultEx2.json
server/httpDemo/src/: HttpServerDemo.cpp
server/httpDemo/src/process/: CMakeLists.txt  CXProcess.cpp
server/httpDemo/src/process/linux/: subprocess.hpp
server/httpDemo/src/task/: CXMultiTaskManager.cpp  CXMultiTaskManager.h  CXTask.cpp  CXTask.h  CXTaskData.h  CXTaskManager.cpp  CXTaskManager.h
server/process/: .gitignore  CMakeLists.txt  build.sh  main.cpp
server/process/Process/: CXProcess.cpp  CXProcess.h
server/process/Process/linux/: CXProcessLinux.cpp  CXProcessLinux.h
server/process/src/: main.cpp
server/process/src/Process/: CXProcess.h
server/process/src/Process/linux/: CXProcessLinux.cpp  CXProcessLinux.h  subprocess.hpp
server/process/src/task/: CXTask.cpp  CXTask.h  CXTaskManager.cpp  CXTaskManager.h
server/wfrestDemo/: .gitignore  CMakeLists.txt  HttpServerDemo.cpp  HttpServerDemo2.cpp  build2.sh  nlohmannJson  nlohmannJson.cpp
work/MediaDetect/: CMakeLists.txt
work/MediaDetect/include/nle/LinuxTTMedia/: ITTAdaptWinDefine.h  ITTMediaReader.hpp  ITTMediaSourcePlugin.hpp  ITTMediaTranscode.hpp  TTMediaPlayerExport.h  TTMediaTranscodeAPI.h
work/MediaDetect/include/nle/LinuxTTMedia/File/: SBT_MediaDetect.h  TPAVFileMapMediaTypeFromSbt.h
work/MediaDetect/include/nle/LinuxTTMedia/helper/: TTMediaLogMsghelper.hpp
work/MediaDetect/include/nle/LinuxTTMedia/plugin/: ITTMediaSourcePlugin.hpp
work/MediaDetect/include/nle/TTMedia/: ITTMediaSampeAVS.hpp  ITTQueryMediaIdET.h  TTMediaErrorCode.h  TTMediaFileAPI.h  TTMediaFileReaderAPI.h  TTMediaPlayerEditExport.h  TTMediaPlayerExport.h  TTMediaUtilityAPI.h
work/MediaDetect/include/nle/TTMedia/helper/: ITTMediaFileRenderPluginHelper.hpp  ITTMediaSourcePluginHelper.hpp  thread_helper.h
work/MediaDetect/src/: VXMediaDetect.cpp  VXMediaDetectErrorCode.h  VXMediaDetectHelper.h
work/TestMediaDetect/: .gitignore  CMakeLists.txt  Package.sh  ReadMe.md  build-Debug.sh  build.sh
work/TestMediaDetect/MediaDetect/: CMakeLists.txt
work/TestMediaDetect/MediaDetect/src/: TPAVFileMapFileTypeFromSbt.cpp  TPAVFileMapFileTypeFromSbt.h  TPAVFileMapFileTypeFromSbt.hpp  TPAVFileMapMediaTypeFromSbt.cpp  TPAVFileMapMediaTypeFromSbt.h  TPAVFileMapMediaTypeFromSbt.hpp  VXMediaDetect.cpp  VXMediaDetect.h  VXMediaDetectBaseDefine.h  VXMediaDetectHelper.cpp  VXMediaDetectHelper.h
work/TestMediaDetect/app/: CMakeLists.txt  main.cpp
work/TestMediaDetect/include/iface/: VXMediaDetect.h  VXMediaDetectBaseDefine.h  VXMediaDetectErrorCode.h
work/TestMediaDetect/include/linux/: VXSDKBaseDefine.h  VXSDKCutlistV2Plus.h  VXSDKMediaDetect.h  VXSDKPlatform.h  VX_CutListV2DataStruct.h  VX_TransBaseDefine.h
work/TestMediaDetect/include/nle/LinuxTTMedia/: ITTAdaptWinDefine.h  ITTMediaDetect.h  ITTMediaTranscodeRender.hpp  ITTMediaWriter.hpp  TTMediaFileSelectorAPI.h  TTMediaPlayerCGRenderExport.h  TTMediaPlayerExport.h  TTMediaTranscodeBaseDef.hpp  TTMediaUtilityBase.h  TTNewStandardDef.h  TTNewStandardPushMacro.h  TTVTRExport.h
work/TestMediaDetect/include/nle/LinuxTTMedia/File/: SBT_MediaDetect2.h  SBT_TransBaseDefine.h  TPAVFileMapFileTypeFromSbt.h  TPAVFileTypeDefs.h  TPBaseFccDef.h
work/TestMediaDetect/include/nle/LinuxTTMedia/helper/: ITTMediaSourceSelectorHelper.hpp  TTMediaSampleUtility.hpp
work/TestMediaDetect/include/nle/LinuxTTMedia/plugin/: ITTMediaPlugin.hpp  ITTMediaWriterPlugin.hpp
work/TestMediaDetect/include/nle/TTMedia/: ITTAFDProcess.h  ITTMediaDetect.h  ITTMediaTranscodeEx.hpp  ITTMediaTranscodeSource.hpp  ITTShotDetect.h  ITTTCReader.h  TTMediaFileReaderHelperAPI.h  TTMediaPlayerEditDef.h  TTMediaPlayerExportEx.h  TTMediaReaderBaseDef.hpp  TTNewStandardDef.h  TTNewStandardPopMacro.h
work/TestMediaDetect/include/nle/TTMedia/helper/: TTMediaSampleAVS.hpp
work/TestMediaDetect/include/nle/TTMedia/plugin/: ITTMediaSourceSelector.hpp
(+709 files in other folders)
